<resources>
    <string name="app_name">DAKO</string>
    <string name="title_activity_mobile_number">MobileNumberActivity</string>

    <string name="FACEBOOK_APP_ID">2060620594168287</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">6245cfbb80facc9537384488f76f28f8</string>


    <string name="logPhoNum">LOGIN WITH PHONE NUMBER</string>

    <string name="notification">Notification</string>
    <string name="walet">Wallet</string>
    <string name="ridehistory">Ride History</string>
    <string name="freerids">Free rids</string>
    <string name="bangla">Bangla</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="help">Help and support</string>
    <string name="legal">Legal</string>
    <string name="drivedako">Drive with DAKO</string>
    <string name="title_activity_maps">Map</string>
    <string name="pickup">Pickup</string>
    <string name="your_location">Your Location</string>
    <string name="destination">Destination</string>
    <string name="where_will_you_go">Where will you go?</string>
    <string name="invite_friend">INVITE \nFRIEND</string>
    <string name="get_discount">GET \nDISCOUNT</string>
    <string name="want_help">WANT \nHELP</string>
    <string name="request_a_car">Request a CAR</string>
    <string name="done">DONE</string>


</resources>
