<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    >

    <RelativeLayout
        android:id="@+id/relReqCar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dim20"
        android:layout_marginRight="@dimen/dim20"
        android:layout_marginTop="@dimen/dim100"
        android:background="@drawable/round_corner"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_a_car"
            android:gravity="center"
            android:padding="@dimen/dim20"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            />

        <ImageView
            android:layout_width="@dimen/dim100"
            android:layout_height="@dimen/dim50"
            android:src="@drawable/car"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dim10"
            />

    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dim20"
        android:layout_marginRight="@dimen/dim20"
        android:layout_marginTop="@dimen/dim20"
        android:background="@drawable/round_corner"
        android:layout_below="@+id/relReqCar"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Request a BIKE"
            android:gravity="center"
            android:padding="@dimen/dim20"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            />

        <ImageView
            android:layout_width="@dimen/dim100"
            android:layout_height="@dimen/dim50"
            android:src="@drawable/bike"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dim10"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <TextView
                android:layout_width="@dimen/dim75"
                android:layout_height="@dimen/dim75"
                android:background="@drawable/round_corner"
                android:text="@string/invite_friend"
                android:gravity="center"
                />

            <TextView
                android:layout_width="@dimen/dim75"
                android:layout_height="@dimen/dim75"
                android:background="@drawable/round_corner"
                android:text="@string/get_discount"
                android:gravity="center"
                android:layout_marginLeft="@dimen/dim10"
                />

            <TextView
                android:layout_width="@dimen/dim75"
                android:layout_height="@dimen/dim75"
                android:background="@drawable/round_corner"
                android:text="@string/want_help"
                android:gravity="center"
                android:layout_marginLeft="@dimen/dim10"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim100"
            android:layout_marginTop="@dimen/dim10"
            ></LinearLayout>

    </LinearLayout>

</RelativeLayout>