<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >



    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim50"
        android:background="@color/colorWhite"
        android:elevation="0dp"
        android:minHeight="?attr/actionBarSize">

        <RelativeLayout
            android:id="@+id/mainHead"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"

                android:layout_centerInParent="true"
                android:src="@drawable/logowh" />


            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dim10"
                android:src="@drawable/notifucation" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>



    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <FrameLayout
            android:id="@+id/containerView"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="match_parent">
        </FrameLayout>


        <fragment
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dim20"
            android:paddingRight="@dimen/dim20"
            android:layout_marginTop="@dimen/dim10"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@color/colorWhite"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dim5"
                android:paddingRight="@dimen/dim5"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pickup"
                    android:layout_marginTop="@dimen/dim5"
                    android:textColor="@color/colorBlack"
                    />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <AutoCompleteTextView
                        android:id="@+id/etPicUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/your_location"
                        android:layout_alignParentLeft="true"
                        android:textColorHint="@color/colorBlack"
                        android:background="@color/colorWhite"
                        android:singleLine="true"
                        android:layout_toLeftOf="@+id/imgSp"
                        android:textColor="@color/colorBlack"
                        />

                    <ImageView
                        android:id="@+id/imgSp"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@mipmap/ic_search"
                        android:layout_alignParentRight="true"
                        />

                </RelativeLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorAsh"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/destination"
                    android:layout_marginTop="@dimen/dim5"
                    android:textColor="@color/colorBlack"
                    />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <AutoCompleteTextView
                        android:id="@+id/etDestination"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/where_will_you_go"
                        android:background="@color/colorWhite"
                        android:textColorHint="@color/colorBlack"
                        android:singleLine="true"
                        android:textColor="@color/colorBlack"
                        android:layout_alignParentLeft="true"
                        android:layout_toLeftOf="@+id/imgDs"
                        />

                    <ImageView
                        android:id="@+id/imgDs"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@mipmap/ic_search"
                        android:layout_alignParentRight="true"
                        />

                </RelativeLayout>



                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorAsh"
                    android:layout_marginBottom="@dimen/dim5"
                    />

            </LinearLayout>

        </LinearLayout>

        <android.support.design.widget.NavigationView
            android:id="@+id/navigation_view"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_gravity="start"
            android:background="#EEDA9B"
            android:layout_marginTop="0dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorDako"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FEE7D4"
                    android:gravity="center"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imgUser"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@mipmap/cercle" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2.7"
                            android:gravity="right"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:text="@string/about"
                                android:textColor="@android:color/black"
                                android:textSize="15sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:text="@string/about"
                                android:textColor="#ADA8A1"
                                android:textSize="15sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:text="@string/about"
                                android:textColor="#E99E82"
                                android:textSize="15sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:adjustViewBounds="true"
                                android:scaleType="centerInside"
                                android:layout_alignParentRight="true"
                                android:layout_marginRight="@dimen/dim10"
                                android:src="@mipmap/ic_pen" />

                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/dim50"
                        android:layout_marginLeft="@dimen/dim10"
                        android:layout_marginTop="@dimen/dim10"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/notification"
                            android:gravity="right"
                            android:paddingTop="@dimen/dim10"
                            android:paddingBottom="@dimen/dim10"
                            />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorWhite"
                            />


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/walet"
                            android:gravity="right"
                            android:paddingTop="@dimen/dim10"
                            android:paddingBottom="@dimen/dim10"
                            />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorWhite"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/ridehistory"
                            android:gravity="right"
                            android:paddingTop="@dimen/dim10"
                            android:paddingBottom="@dimen/dim10"
                            />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorWhite"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/freerids"
                            android:gravity="right"
                            android:paddingTop="@dimen/dim10"
                            android:paddingBottom="@dimen/dim10"
                            />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorWhite"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/bangla"
                            android:gravity="right"
                            android:paddingTop="@dimen/dim10"
                            android:paddingBottom="@dimen/dim10"
                            />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorWhite"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/about"
                            android:gravity="right"
                            android:paddingTop="@dimen/dim10"
                            android:paddingBottom="@dimen/dim10"
                            />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorWhite"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/settings"
                            android:gravity="right"
                            android:paddingTop="@dimen/dim10"
                            android:paddingBottom="@dimen/dim10"
                            />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorWhite"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/help"
                            android:gravity="right"
                            android:paddingTop="@dimen/dim10"
                            android:paddingBottom="@dimen/dim10"
                            />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorWhite"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/legal"
                            android:gravity="right"
                            android:paddingTop="@dimen/dim10"
                            android:paddingBottom="@dimen/dim10"
                            />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorWhite"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/drivedako"
                            android:gravity="right"
                            android:paddingTop="@dimen/dim10"
                            android:paddingBottom="@dimen/dim10"
                            />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorWhite"
                            />


                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </android.support.design.widget.NavigationView>

    </android.support.v4.widget.DrawerLayout>


</RelativeLayout>